--- a/package.json
+++ b/package.json
@@ -30,15 +30,17 @@
     "@angular-devkit/build-angular": "^18.0.5",
     "@angular/cli": "^18.0.5",
     "@angular/compiler-cli": "^18.0.0",
+    "@types/chai": "^4.3.16",
     "@types/express": "^4.17.17",
-    "@types/jasmine": "~5.1.0",
+    "@types/mocha": "^10.0.7",
     "@types/node": "^18.18.0",
-    "jasmine-core": "~5.1.0",
+    "chai": "^5.1.1",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
+    "mocha": "^10.6.0",
     "typescript": "~5.4.2"
   }
 }
