--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -5,7 +5,7 @@
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
     "types": [
-      "jasmine"
+      "node", "mocha", "chai"
     ]
   },
   "include": [
